# airecon

./: .coverage  .gitignore  CHANGELOG.txt  README.md  coverage.xml  install.sh  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yaml  docs.yml  project-routing.yml  python-app.yml
.hypothesis/constants/: 00257f5ba5bbb544  01751667a1343823  01821a73d342220a  01f5977e6a28cb1b  020bd4b9cc3144b7  032bb05e75ff8d56  034eac78c554863c  04063b4180a34865  055c6411036374f4  057fdbbce03a9cdd  06ba3af18b09d711  06c88ddd0840a021  0735cddddfc8a428  0768246cba53164c  077d8117b86fe3e3  08389b998708dfea  089b4e7653b5d0f6  08e425f88c3bb716  09ae28b390a241d0  0a68bd12d35ee76f  0b009714ddb85190  0b6b22d99430e3b9  0bced13893da2644  0c81e2f83b59deea  0d64ef357c94737d  0d8ae97a26265690  0eaa1e71adb72da2  0f6197bf0cc46843  100da2413d65b0b1  102918410e84aab7  104a43699c75c7c0  10687c3bf6346fb3  121a18ee44d6948d  12d87c20d658fb23  12edbc3a82143dff  13b5407291eeaf0f  13b7c9e560189932  147ec058118e03f9  14dee93621a49e83  15066f87c6fb6307  (+413 more)
airecon/: __init__.py  __main__.py  _version.py  logger.py
airecon/containers/: Dockerfile  docker-entrypoint.sh
airecon/proxy/: browser.py  caido_client.py  config.py  correlation.py  data_loader.py  docker.py  filesystem.py  fuzzer.py  mcp.py  memory.py  ollama.py  reporting.py  searxng.py  semgrep.py  server.py  subagent.py  system.py  web_search.py
airecon/proxy/agent/: __init__.py  adaptive_learning.py  agent_graph.py  attack_surface.py  auth_manager.py  captcha_solver.py  chain_planner.py  command_parse.py  constants.py  correlation_engine.py  executors.py  executors_browser.py  executors_caido.py  executors_catalog.py  executors_dispatch.py  executors_filesystem.py  executors_fuzzing.py  executors_interactive.py  executors_observe.py  executors_reporting.py  executors_skill_loader.py  executors_utils.py  file_reference.py  formatters.py  generative_fuzzing.py  loop.py  loop_context.py  loop_cycle_llm.py  loop_cycle_post.py  loop_cycle_prelude.py  loop_exploration.py  loop_inference.py  loop_lifecycle.py  loop_message_entry.py  loop_objectives.py  loop_phase_mentor.py  loop_policy.py  loop_process.py  loop_process_core.py  loop_semantic.py  (+27 more)
airecon/proxy/data/: ab_signals.json  attack_chains.json  business_logic_patterns.json  cve_correlations.json  endpoint_patterns.json  escalation_patterns.json  file_extensions.json  fuzzer_data.json  owasp_rules.json  patterns.json  port_correlations.json  (+11 more)
airecon/tui/: app.py  buddy.py  startup.py  styles.tcss
docs/: README.md  changelog.md  configuration.md  features.md  index.md  installation.md  stability.md  tools.md
docs/assets/: custom.css
docs/development/: creating_skills.md
junit/: test-results.xml
tests/: conftest.py  test_chaos.py  test_e2e.py  test_integration.py  test_load.py  test_logger.py  test_main.py  test_property_based.py
tests/proxy/: test_browser.py  test_browser_screenshot.py  test_caido_client.py  test_config.py  test_correlation.py  test_ctf_detection.py  test_data_loader.py  test_docker.py  test_filesystem.py  test_fuzzer.py  test_integration_smoke_contracts.py  test_mcp.py  test_memory.py  test_ollama.py  test_ollama_capabilities.py  test_ollama_response_time.py  test_reporting.py  test_reporting_helpers.py  test_searxng.py  test_semgrep.py  test_semgrep_p3.py  test_server.py  test_system.py  test_system_skills.py  test_validation.py  test_web_search.py  test_web_search_p3.py
tests/tui/: test_app.py  test_buddy.py  test_input.py  test_path_completer.py  test_startup.py  test_widgets.py
(+190 files in other folders)
