[tool.poetry]
name = "airecon"
version = "0.1.6-beta"
description = "AI-powered security reconnaissance: Ollama + Kali Linux Docker sandbox + Textual TUI"
authors = ["pikpikcu"]
readme = "README.md"
packages = [{include = "airecon"}]
include = [
    "airecon/proxy/skills/**/*.md", 
    "airecon/containers/**/*",
    "airecon/proxy/data/**/*",
    "airecon/proxy/prompts/**/*"
]

[tool.poetry.dependencies]
python = "^3.12"
textual = "^8.0.0"
httpx = "^0.28.1"
fastapi = "^0.133.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
sse-starlette = "^3.2.0"
rich = "^14.3.0"
pydantic = "^2.12.5"
playwright = "^1.58.0"
ollama = "^0.6.1"
cvss = "^3.6"
duckduckgo-search = "^8.1.0"
aiohttp = "^3.9.0"
defusedxml = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
textual-dev = "^1.7.0"
autopep8 = "^2.3.2"
pytest-cov = "^6.0.0"
pytest-mock = "^3.15.1"
pytest-timeout = "^2.4.0"
mkdocs-material = "^9.6.7"
pyright = "^1.1.408"

[tool.poetry.scripts]
airecon = "airecon.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["airecon"]
# Exclude integration-heavy files that require Docker/Ollama/Playwright at runtime
omit = [
    "airecon/__main__.py",
    "airecon/logger.py",
    "airecon/proxy/server.py",
    "airecon/proxy/searxng.py",
    "airecon/proxy/agent/agent_graph.py",
    "airecon/proxy/agent/subagent.py",
    "airecon/proxy/browser.py",
    "airecon/proxy/ollama.py",
    "airecon/tui/*",
]

[tool.coverage.report]
# Current baseline: ~52%. Target: 70% (increase as test coverage grows).
# To raise threshold: write tests for executors.py, loop.py, filesystem.py.
fail_under = 52
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
include = ["airecon"]
exclude = ["**/__pycache__", ".venv", "venv", "dist", "build"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportAttributeAccessIssue = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateImportUsage = true
reportUnboundVariable = true
reportGeneralTypeIssues = true
reportInvalidTypeForm = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
